configure-app/traefik_ingressroute/argocd/argocd-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.k3s.home.vinny.dev.br`)
    kind: Rule
    priority: 10
    services:
    - kind: Service
      name: argocd-server
      port: http
  - match: >-
      Host(`argocd.k3s.home.vinny.dev.br`) &&
      Headers(`Content-Type`, `application/grpc`)
    priority: 11
    kind: Rule
    services:
    - kind: Service
      name: argocd-server
      port: http
      scheme: h2c
  tls:
    secretName: argocd-certificate-secret
